--- a/prestige.cabal
+++ b/prestige.cabal
@@ -26,6 +26,7 @@ executable prestige-exe
   build-depends:       base
                      , prestige
                      , scotty
+                     , aeson
   default-language:    Haskell2010
 
 test-suite prestige-test
