--- a/prestige.cabal
+++ b/prestige.cabal
@@ -15,8 +15,10 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Lib, Prestige.API
   build-depends:       base >= 4.7 && < 5
+                     , scotty
+                     , beam
   default-language:    Haskell2010
 
 executable prestige-exe
