added postgresql-simple to dependencies
Looking into community feedback I'm going to work with this package for
all database interactions.

--- a/prestige.cabal
+++ b/prestige.cabal
@@ -28,6 +28,7 @@ executable prestige-exe
                      , prestige
                      , scotty
                      , aeson
+                     , postgresql-simple
   default-language:    Haskell2010
 
 test-suite prestige-test
